--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About me 第五週作業</title>
+    <title>XIZHEN範例網站</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,10 +35,10 @@
 			<div class="navbar-collapse collapse" style="font-family:Microsoft JhengHei 25px">							
 				<div class="menu">
 					<ul class="nav nav-tabs" role="tablist">
-						<li role="presentation" class="active"><a href="index.html">Home</a></li>
-						<li role="presentation"><a href="https://tw.yahoo.com/news">News</a></li>
-						<li role="presentation"><a href="http://xxx.xxx.xxx.xxx/xxxx">My Favorites</a></li>
-						<li role="presentation"><a href="http://xxx.xxx.xxx.xxx/xxx">My Album</a></li>				
+						<li role="presentation" class="active"><a href="index.html">首頁</a></li>
+						<li role="presentation"><a href="https://tw.yahoo.com/news">Yahoo新聞</a></li>
+						<li role="presentation"><a href="https://www.youtube.com/?gl=TW&hl=zh-TW">YT</a></li>
+						<li role="presentation"><a href="https://www.facebook.com/">FB</a></li>				
 					</ul>
 				</div>
 			</div>			
@@ -59,7 +59,7 @@
 	<div class="jumbotron">
 		<h1>About me</h1>
 		<p>
-		第一個
+		網路抓的圖片啦
 		</p>
 	</div>
 	
